[package]
name = "image-slug-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
google-sheets4 = "7.0.0"
hyper-rustls = "0.27.7"
hyper-util = { version = "0.1.19", features = ["client-legacy", "http1", "http2"] }
once_cell = "1.21.3"
rand = "0.9.2"
rustls = "0.23.35"
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
yup-oauth2 = "12.1.1"
